# CarlsCalendar

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.prebuilt.yml  docker-compose.yml  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: dependency-audit.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  docker-entrypoint.sh
backend/src/: compliance.rs  config.rs  db.rs  errors.rs  main.rs  state.rs
backend/src/auth/: email.rs  mod.rs  seed.rs
backend/src/middleware/: auth_guard.rs  mod.rs  role_guard.rs
backend/src/models/: mod.rs
backend/src/routes/: admin.rs  auth.rs  calendar.rs  children.rs  compliance.rs  consent.rs  images.rs  mod.rs  pictograms.rs  schedules.rs  users.rs  visual_documents.rs
backend/src/services/: mod.rs  pictograms.rs
database/: Dockerfile
database/migrations/: 001_create_users.sql  001_initial_schema.sql  002_create_child_profiles.sql  002_seed_retention_rules.sql  003_create_schedules.sql  003_pictogram_prefetch_settings.sql  003_seed_first_then_templates.sql  004_create_schedule_items.sql  005_create_assignments.sql  006_create_qr_tokens.sql  008_seed_admin.sql  (+3 more)
documents/: AAC_BOARD.md  REFACTOR_TODO.md  SECURITY_INCIDENT_RUNBOOK.md  UI_MANUAL.md  VISUAL_SUPPORT_TECH_SPEC.md  Visuel_boards.md  week.md
frontend/: Dockerfile  Dockerfile.prebuilt  index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
nginx/: nginx.conf  nginx.prod.conf
scripts/: build-prebuilt.sh  install-deps.sh  logs.sh  rebuild-backend.sh  rebuild-frontend.sh  reset-dev-db.sh  up-prebuilt.sh
(+59 files in other folders)
