[package]
name    = "carlscalendar-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "carlscalendar-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum            = { version = "0.8", features = ["multipart"] }
tower           = "0.5"
tower-http      = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio           = { version = "1", features = ["full"] }

# Database
sqlx            = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "uuid", "time", "chrono"] }

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Validation
validator       = { version = "0.20.0", features = ["derive"] }

# Auth / Passwords
argon2          = "0.5"
rand            = "0.10.0"
uuid            = { version = "1", features = ["v4", "serde"] }

# Session / Cookies
tower-cookies   = "0.11.0"

# Time
time            = { version = "0.3", features = ["macros"] }

# Time (existing)
chrono          = { version = "0.4", features = ["serde"] }

# Email
lettre          = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Config / Env
dotenvy         = "0.15"

# Logging / Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "1"
anyhow    = "1"
sha2      = "0.10"
reqwest   = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
